# berkeley-cps-symbiotic-design

./: .coverage-tmp.html  .gitignore  .gitmodules  1.json  2.json  404.html  Dockerfile  LICENSE  Makefile  README.md  clean_evaluations.sh  conda-dependencies.yml  docker_build.sh  docker_enter.sh  docker_run.sh  docker_run_old.sh  duties.py  entrypoint.sh  index.html  launch.sh  launch_no_opt.sh  mkdocs.yml  objects.inv  pyproject.toml  run_docker.sh  settings.toml  sitemap.xml  startup_script.sh
changelog/: index.html
contributing/: index.html
credits/: index.html
docs/: gen_credits.py
license/: index.html
reference/SUMMARY/: index.html
reference/backend/: index.html
reference/backend/app/: index.html
reference/backend/operations/: index.html
reference/backend/operations/rating/: index.html
reference/backend/shared/: index.html
reference/backend/shared/paths/: index.html
reference/sym_cps/: index.html
reference/sym_cps/classifier/: index.html
reference/sym_cps/cli/: index.html
reference/sym_cps/contract/: index.html
reference/sym_cps/contract/component_selection/: index.html
reference/sym_cps/contract/component_selection_refined/: index.html
reference/sym_cps/contract/contract/: index.html
reference/sym_cps/contract/contract_composition/: index.html
reference/sym_cps/contract/contract_composition_later_clause/: index.html
reference/sym_cps/contract/contract_general/: index.html
reference/sym_cps/contract/motor_propeller_analysis/: index.html
reference/sym_cps/contract/tool/: index.html
reference/sym_cps/contract/uav_contracts/: index.html
reference/sym_cps/control/: index.html
reference/sym_cps/database/: index.html
reference/sym_cps/database/tools/: index.html
reference/sym_cps/evaluation/: index.html
reference/sym_cps/evaluation/cli/: index.html
reference/sym_cps/evaluation/fdm_data/: index.html
reference/sym_cps/evaluation/fdm_interface/: index.html
reference/sym_cps/evaluation/fdm_ret/: index.html
reference/sym_cps/evaluation/fdm_to_json/: index.html
reference/sym_cps/evaluation/tools/: index.html
reference/sym_cps/examples/: index.html
reference/sym_cps/examples/build_uav/: index.html
reference/sym_cps/examples/component_selection/: index.html
reference/sym_cps/examples/contract/: index.html
reference/sym_cps/examples/control/: index.html
reference/sym_cps/examples/custom_design/: index.html
reference/sym_cps/examples/design_swri/: index.html
reference/sym_cps/examples/designs/: index.html
reference/sym_cps/examples/evaluation/: index.html
reference/sym_cps/examples/parameter/: index.html
reference/sym_cps/examples/step_wise_topology/: index.html
reference/sym_cps/examples/topology/: index.html
reference/sym_cps/examples/topology_3/: index.html
reference/sym_cps/grammar/: index.html
reference/sym_cps/grammar/rules/: index.html
reference/sym_cps/grammar/tools/: index.html
reference/sym_cps/grammar/topology/: index.html
reference/sym_cps/hci/: index.html
reference/sym_cps/initialize/: index.html
reference/sym_cps/optimizers/: index.html
reference/sym_cps/optimizers/component_selection/: index.html
reference/sym_cps/optimizers/concrete_opt/: index.html
reference/sym_cps/optimizers/control_opt/: index.html
reference/sym_cps/optimizers/params_opt/: index.html
reference/sym_cps/representation/: index.html
reference/sym_cps/reverse_engineering/: index.html
reference/sym_cps/shared/: index.html
reference/sym_cps/tools/: index.html
scripts/: setup.sh  uninstall.sh
search/: search_index.json
src/backend/: app.py
src/backend/operations/: rating.py
src/backend/shared/: paths.py
src/frontend/: package-lock.json
src/sym_cps/: __init__.py  __main__.py  cleanup.py  cli.py  evaluate_all.py  evaluate_test.py  grid_debug.py  initialize.py  no_wings_evaluate.py  plot_conditions.py  plot_debug.py  plot_grid_designs.py  scripts.py
src/sym_cps/contract/: component_selection.py  component_selection_refined.py  contract.py  contract_composition.py  contract_composition_later_clause.py  contract_general.py  motor_propeller_analysis.py  uav_contracts.py
src/sym_cps/evaluation/: __init__.py  cli.py  design_swri_missing_hub.json  fdm_data.py  fdm_interface.py  fdm_to_json.py  tools.py
src/sym_cps/examples/: build_uav.py  component_selection.py  contract.py  control.py  custom_design.py  design_swri.py  designs.py  evaluation.py  generate_topology.py  library.py  parameter.py  step_wise_topology.py  topology.py  topology_3.py
src/sym_cps/grammar/: __init__.py  abstract_design.py  analysis.py  contracts.py  elements.py  example_rules.dot  generator.py  grammar.py  grammar_rules_hussein.json  grid.py  process.py  rules.py  structures.py  symbols.py  tools.py  topology.py
src/sym_cps/isomorphisms/: structures.py
src/sym_cps/optimizers/: __init__.py
src/sym_cps/reverse_engineering/: components_analysis.py  connections_mapping.py  isomorphisms_analysis.py  parameters_analysis.py
src/sym_cps/scripts/: figures.py  general.py  plot_conditions.py  plot_debug.py  plot_grid_designs.py
src/sym_cps/shared/: __init__.py  designs.py  library.py  objects.py  paths.py
src/sym_cps/tools/: connections_mapping.py  extract_results.py  figures.py  graphs.py  io.py  my_io.py  persistance.py  strings.py  update_library.py
tests/: __init__.py  test_abastract_topology.py  test_cli.py  test_d_concrete.py  test_library.py
(+173 files in other folders)
